@@ -41,6 +41,7 @@ skip = ^DBD::
 Devel::StackTrace = 1.30
 PerlIO::utf8_strict = 0
 Template::Tiny = 0.11
+DateTime = 1.04
 DateTime::TimeZone = 0
 Pod::Escapes = 1.04
 
