@@ -290,7 +290,7 @@ for my $spec (
 # Test all formatting characters.
 my $local_pdt = $pdt->clone;
 $local_pdt->set_time_zone('local');
-$local_pdt->set( locale => $LC::TIME );
+$local_pdt->set_locale($LC::TIME);
 
 my $formatter = $cmd->formatter;
 for my $spec (
